# server

./: .gitignore  Cargo.toml  log4rs.yml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/handlers/: error_handling.rs  example.rs  mod.rs
